--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.firebase:firebase-database:11.0.4'
     compile 'com.android.support:design:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -28,7 +29,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     compile 'com.android.support:cardview-v7:26+'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.tuyenmonkey:mkloader:1.4.0'
 }
+
+
+
 
 
 
