--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:26+'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.tuyenmonkey:mkloader:1.4.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
 
