--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.app.ssoft.vrs"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -31,6 +31,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.tuyenmonkey:mkloader:1.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.intentfilter:android-permissions:0.1.5'
+
 }
 
 
