--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -21,6 +22,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
     compile 'com.android.support:design:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -32,7 +35,14 @@ dependencies {
     compile 'com.tuyenmonkey:mkloader:1.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.intentfilter:android-permissions:0.1.5'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+
 }
+
+
+
+
+
 
 
 
